[gd_scene load_steps=5 format=3 uid="uid://b5xld07druqfy"]

[ext_resource type="Script" path="res://scripts/bullet.gd" id="1_kin24"]
[ext_resource type="Texture2D" uid="uid://b4jncorrl1ryp" path="res://assets/sprites/bubbles/bubbles01.png" id="2_6f75m"]
[ext_resource type="Texture2D" uid="uid://diepemg43by3o" path="res://assets/sprites/bubbles/bubbles02.png" id="3_7i60o"]
[ext_resource type="Texture2D" uid="uid://qshu0sxv0qp4" path="res://assets/sprites/bubbles/bubbles03.png" id="4_i070e"]

[node name="Bullet" type="Node2D"]
script = ExtResource("1_kin24")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
position = Vector2(-2, -3)
scale = Vector2(4.15, 3.7)

[node name="BUBBLE_1" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.875, 0.875)
texture = ExtResource("2_6f75m")

[node name="BUBBLE_2" type="Sprite2D" parent="."]
scale = Vector2(1.125, 1.125)
texture = ExtResource("3_7i60o")

[node name="BUBBLE_3" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.875, 0.875)
texture = ExtResource("4_i070e")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
